--- a/src/ong/desktopApp/view/MainMenu.fxml
+++ b/src/ong/desktopApp/view/MainMenu.fxml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXDrawer?>
-<?import com.jfoenix.controls.JFXHamburger?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" fx:id="root" prefHeight="360.0" prefWidth="504.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ong.desktopApp.controller.FXML_MainMenuController">
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<AnchorPane id="AnchorPane" fx:id="root" xmlns="http://javafx.com/javafx/10.0.2-internal"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="ong.desktopApp.controller.FXML_MainMenuController"
+            prefWidth="1200" prefHeight="800" >
     <children>
-        <JFXDrawer fx:id="drawer" defaultDrawerSize="200.0" layoutY="-6.0" prefHeight="368.0" prefWidth="108.0" />
-        <JFXHamburger fx:id="hamburger" layoutX="460.0" layoutY="14.0" />
+        <JFXDrawer fx:id="drawer" defaultDrawerSize="200.0" layoutY="-6.0" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     </children>
+    <BorderPane fx:id="contentPanel" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0"
+                AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" >
+
+    </BorderPane>
+    <JFXHamburger fx:id="hamburger" onMouseClicked="#hamClicked" layoutX="460.0" layoutY="14.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0" />
+
 </AnchorPane>
