--- a/src/ong/desktopApp/view/Menu.fxml
+++ b/src/ong/desktopApp/view/Menu.fxml
@@ -5,10 +5,13 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ong.desktopApp.controller.FXML_MenuController">
+<?import javafx.scene.layout.StackPane?>
+<StackPane alignment="center" xmlns="http://javafx.com/javafx/8.0.171"
+           xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="ong.desktopApp.controller.FXML_MenuController">
+<GridPane alignment="center" hgap="10" vgap="10" >
     <Button onAction="#sayHelloWorld" text="Say 'Hello World'" />
-    <Label fx:id="helloWorld" GridPane.rowIndex="1" />
+    <Label fx:id="helloWorld" GridPane.rowIndex="1" text="Hello World!"/>
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
@@ -17,3 +20,4 @@
       <RowConstraints />
    </rowConstraints>
 </GridPane>
+</StackPane>
