--- a/src/ong/desktopApp/view/VoluntariosNacionales.fxml
+++ b/src/ong/desktopApp/view/VoluntariosNacionales.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="ong.desktopApp.controller.FXML_VIController"
+           fx:controller="ong.desktopApp.controller.FXML_VNController"
            xmlns="http://javafx.com/javafx/2.2">
     <VBox maxWidth="600" maxHeight="600" spacing="10">
         <children>
