--- a/src/ong/desktopApp/view/DatosDelSistema.fxml
+++ b/src/ong/desktopApp/view/DatosDelSistema.fxml
@@ -6,18 +6,23 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <StackPane alignment="center" xmlns="http://javafx.com/javafx/8.0.171"
            xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="ong.desktopApp.controller.FXML_DatosSistemaController">
-    <GridPane alignment="center" hgap="10" vgap="10" >
-        <Button onAction="#sayHelloWorld" text="Say 'Hello World'" />
-        <Label fx:id="helloWorld" GridPane.rowIndex="1" text="Hello World!"/>
-        <columnConstraints>
-            <ColumnConstraints />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints />
-            <RowConstraints />
-        </rowConstraints>
-    </GridPane>
+           fx:controller="ong.desktopApp.controller.FXML_DatosSistemaController"
+           stylesheets="/ong/desktopApp/resources/css/style.css">
+    <VBox maxWidth="800" maxHeight="700" spacing="10">
+        <Label fx:id="title" text="Datos del Sistema" />
+        <GridPane alignment="center" hgap="10" vgap="10" >
+            <Button onAction="#sayHelloWorld" text="Say 'Hello World'" />
+            <Label fx:id="helloWorld" GridPane.rowIndex="1"/>
+            <columnConstraints>
+                <ColumnConstraints />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints />
+                <RowConstraints />
+            </rowConstraints>
+        </GridPane>
+    </VBox>
 </StackPane>
