--- a/src/ong/desktopApp/view/DatosDelSistema.fxml
+++ b/src/ong/desktopApp/view/DatosDelSistema.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<StackPane alignment="center" xmlns="http://javafx.com/javafx/8.0.171"
+<StackPane fx:id="rootDS" alignment="center" xmlns="http://javafx.com/javafx/8.0.171"
            xmlns:fx="http://javafx.com/fxml/1"
            fx:controller="ong.desktopApp.controller.FXML_DatosSistemaController"
            stylesheets="/ong/desktopApp/resources/css/style.css">
