--- a/src/ong/desktopApp/view/SideMenuPanel.fxml
+++ b/src/ong/desktopApp/view/SideMenuPanel.fxml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import com.jfoenix.controls.JFXButton?>
 
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.VBox?>
-
-<?import javafx.scene.layout.StackPane?>
-
-<?import javafx.scene.layout.BorderPane?>
-<StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="ong.desktopApp.controller.FXML_SideMenuPanelController"
-           xmlns="http://javafx.com/javafx/8.0.171"
-           stylesheets="/ong/desktopApp/resources/css/style.css">
+<StackPane fx:id="root" focusTraversable="true" stylesheets="/ong/desktopApp/resources/css/style.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ong.desktopApp.controller.FXML_SideMenuPanelController">
     <BorderPane>
             <top>
                 <VBox fx:id="sideBar">
