--- a/src/ong/desktopApp/view/VoluntariosNacionales.fxml
+++ b/src/ong/desktopApp/view/VoluntariosNacionales.fxml
@@ -7,49 +7,38 @@
            fx:controller="ong.desktopApp.controller.FXML_VNController"
            xmlns="http://javafx.com/javafx/2.2"
            stylesheets="/ong/desktopApp/resources/css/style.css">
-    <VBox maxWidth="700" maxHeight="700" spacing="10">
+    <VBox maxWidth="1100" maxHeight="700" spacing="10">
         <Label fx:id="title" text="Voluntarios Nacionales"/>
         <children>
             <HBox alignment="CENTER">
-                <Label styleClass="title-label">Read Only Tree Table View</Label>
-                <Label styleClass="title-label" fx:id="treeTableViewCount" minWidth="80"></Label>
-                <JFXButton fx:id="treeTableViewAdd" buttonType="FLAT" text="+"/>
-                <JFXButton fx:id="treeTableViewRemove" buttonType="FLAT" text="-"/>
-                <StackPane HBox.hgrow="ALWAYS">
-                    <StackPane StackPane.alignment="CENTER_RIGHT" maxWidth="200">
-                        <JFXTextField fx:id="searchField" promptText="Search..."></JFXTextField>
-                    </StackPane>
-                </StackPane>
-            </HBox>
-            <JFXTreeTableView fx:id="treeTableView">
-                <columns>
-                    <JFXTreeTableColumn fx:id="firstNameColumn"
-                                        minWidth="133" text="First Name" prefWidth="133"
-                                        resizable="false"></JFXTreeTableColumn>
-                    <JFXTreeTableColumn fx:id="lastNameColumn" text="Last Name"
-                                        minWidth="133" resizable="false"></JFXTreeTableColumn>
-                    <JFXTreeTableColumn fx:id="ageColumn" text="Age"
-                                        minWidth="133" resizable="false"></JFXTreeTableColumn>
-                </columns>
-            </JFXTreeTableView>
-
-            <HBox alignment="CENTER">
                 <Label styleClass="title-label">Editable Tree Table View</Label>
-                <Label styleClass="title-label" fx:id="editableTreeTableViewCount"></Label>
+                <Label styleClass="title-label" fx:id="editableTreeTableViewCount"/>
                 <StackPane HBox.hgrow="ALWAYS">
                     <StackPane StackPane.alignment="CENTER_RIGHT" maxWidth="200">
-                        <JFXTextField fx:id="searchField2" promptText="Search..."></JFXTextField>
+                        <JFXTextField fx:id="searchField2" promptText="Search..."/>
                     </StackPane>
                 </StackPane>
             </HBox>
             <JFXTreeTableView fx:id="editableTreeTableView">
                 <columns>
                     <JFXTreeTableColumn fx:id="firstNameEditableColumn"
-                                        text="First Name" minWidth="133" resizable="false"></JFXTreeTableColumn>
+                                        text="Nombre" minWidth="133" resizable="false"/>
                     <JFXTreeTableColumn fx:id="lastNameEditableColumn"
-                                        text="Last Name" minWidth="133" resizable="false"></JFXTreeTableColumn>
-                    <JFXTreeTableColumn fx:id="ageEditableColumn"
-                                        text="Age" minWidth="133" resizable="false"></JFXTreeTableColumn>
+                                        text="Primer Apellido" minWidth="133" resizable="false"/>
+                    <JFXTreeTableColumn fx:id="familyNameEditableColumn"
+                                        text="Segundo Apellido" minWidth="133" resizable="false"/>
+                    <JFXTreeTableColumn fx:id="streetEditableColumn"
+                                        text="Calle" minWidth="220" resizable="false"/>
+                    <JFXTreeTableColumn fx:id="streetNumberEditableColumn"
+                                        text="# Calle" minWidth="60" resizable="false"/>
+                    <JFXTreeTableColumn fx:id="stateEditableColumn"
+                                        text="Provincia" minWidth="133" resizable="false"/>
+                    <JFXTreeTableColumn fx:id="phoneEditableColumn"
+                                        text="Teléfono" minWidth="133" resizable="false"/>
+                    <JFXTreeTableColumn fx:id="mailEditableColumn"
+                                        text="Correo electrónico" minWidth="133" resizable="false"/>
+                    <JFXTreeTableColumn fx:id="numHoursEditableColumn"
+                                        text="# Horas" minWidth="133" resizable="false"/>
                 </columns>
             </JFXTreeTableView>
         </children>
