--- a/src/ong/desktopApp/view/DatosDelSistema.fxml
+++ b/src/ong/desktopApp/view/DatosDelSistema.fxml
@@ -1,28 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import com.jfoenix.controls.JFXMasonryPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<StackPane fx:id="rootDS" alignment="center" xmlns="http://javafx.com/javafx/8.0.171"
-           xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="ong.desktopApp.controller.FXML_DatosSistemaController"
-           stylesheets="/ong/desktopApp/resources/css/style.css">
-    <VBox maxWidth="1100" maxHeight="700" spacing="10">
-        <Label fx:id="title" text="Datos del Sistema" />
-        <GridPane alignment="center" hgap="10" vgap="10" >
-            <Button onAction="#sayHelloWorld" text="Say 'Hello World'" />
-            <Label fx:id="helloWorld" GridPane.rowIndex="1"/>
-            <columnConstraints>
-                <ColumnConstraints />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints />
-                <RowConstraints />
-            </rowConstraints>
-        </GridPane>
-    </VBox>
+<StackPane fx:id="rootDS" alignment="center" stylesheets="/ong/desktopApp/resources/css/style.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ong.desktopApp.controller.FXML_DatosSistemaController">
+   <BorderPane fx:id="infoPanel" prefHeight="400.0" prefWidth="600.0" style="-fx-border-color: red;">
+      <center>
+          <StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
+                     xmlns="http://javafx.com/javafx/2.2">
+              <ScrollPane fitToWidth="true" fx:id="scrollPane" hbarPolicy="NEVER">
+                  <JFXMasonryPane fx:id="masonryPane" HSpacing="10" VSpacing="10">
+                      <padding><Insets top="150" right="300" bottom="200" left="300"/></padding>
+                  </JFXMasonryPane>
+              </ScrollPane>
+          </StackPane>
+      </center>
+   </BorderPane>
 </StackPane>
